--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body {
     background-color: #f4f4f4;
 }
 
+.logo {
+    display: flex;
+    font-size: 24px;
+    font-weight: bold;
+    width: 100px;
+    height: 100px;
+}
+
 header {
     background: #333;
     color: #fff;
